feat(spin-java-module): add add-modules, compress, vm, bind-services, and strip-debug jlink options